@@ -1,16 +1,22 @@
 package com.assetmanager.app.view.html;
 
+import com.assetmanager.app.model.entity.Asset;
+import com.assetmanager.app.model.entity.computer.Computer;
 import org.apache.commons.lang3.StringUtils;
 
+import javax.inject.Inject;
 import java.io.Serializable;
 import java.lang.reflect.Field;
 import java.lang.reflect.InvocationTargetException;
+import java.lang.reflect.Method;
 import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
+
+import static com.assetmanager.app.view.html.AssetCardRender.renderAssetCards;
 
 
 public class HtmlComponent implements Serializable {
@@ -27,8 +33,12 @@ public class HtmlComponent implements Serializable {
         StringBuilder stringBuilder = new StringBuilder()
                 .append("<div class=\"row justify-content-center\">\n")
                 .append("<div class=\"col-md-11 mr-0\">\n")
-                .append("<div class=\"btn-toolbar\"><a href=\"" + htmlTableLabel.addUrl() + "\"><button class=\"btn btn-primary rounded-2\">Add " + htmlTableLabel.label() + "</button></a></div>\n")
-                .append("<div class=\"\">\n")
+                .append("<div class=\"btn-toolbar\"><a href=\"" + htmlTableLabel.addUrl() + "\"><button class=\"btn btn-primary rounded-2\">Add " + htmlTableLabel.label() + "</button></a></div>\n");
+
+        if (Asset.class.equals(dataClass)) {
+            stringBuilder.append(renderAssetCards());
+        }
+        stringBuilder.append("<div class=\"\">\n")
                 .append("<div style=\"max-height: 60vh; overflow: auto;\">\n")
                 .append("<table class=\" table table-bordered border-4 table-striped table-responsive-sm \">\n")
                 .append("<thead class=\"table-success\">\n")
@@ -58,10 +68,19 @@ public class HtmlComponent implements Serializable {
                     continue;
                 field.setAccessible(true);
                 try {
-                    stringBuilder.append("<td>")
-                            .append(field.get(model))
-                            .append("</td>");
-                } catch (IllegalAccessException e) {
+                    if (field.getType().isEnum()) {
+                        Object enumValue = field.get(model);
+                        Method method = field.getType().getMethod("getName");
+                        stringBuilder.append("<td>")
+                                .append(method.invoke(enumValue))
+                                .append("</td>");
+                    } else {
+
+                        stringBuilder.append("<td>")
+                                .append(field.get(model))
+                                .append("</td>");
+                    }
+                } catch (IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
                     throw new RuntimeException(e);
                 }
             }
@@ -95,7 +114,6 @@ public class HtmlComponent implements Serializable {
 
 
     public static <T> String form(Class<T> t) {
-
         @SuppressWarnings("ignore")
         String className = t.getSimpleName();
 
@@ -103,18 +121,34 @@ public class HtmlComponent implements Serializable {
 
         StringBuilder htmlFormBuilder = new StringBuilder();
         htmlFormBuilder.append(" <div class=\"row justify-content-center\">\n" +
-                " <div class=\"col-md-4 p-2 ml-2\">\n" +
-                " <div class=\"asset-container mx-auto\" style=\"\">\n" +
+                " <div class=\"col-md-10 p-2 ml-2\">\n" +
+                " <div class=\" bg-white asset-container mx-auto\" style=\"\">\n" +
                 " <form method=" + htmlForm.httpMethod() +
                 " action= " + htmlForm.url() + " ");
-        htmlFormBuilder.append("class=\" data-form border border-4\">\n" +
+
+        // I need the form to have the inputs horizontal. The form is becoming too long
+        htmlFormBuilder.append("<div class=\" data-form border border-1 p-3 rounded\">\n" +
                 " <h4 class=\"text-center mb-0 mt-0\">" +
                 "Create New " + htmlForm.label() + "</h4>");
 
-        List<Field> fields = List.of(t.getDeclaredFields());
+        int tabCounter = 0;
+        int fieldsInCurrentTab = 0;
+        int maxFieldsPerTab = 4;
+
+        List<Field> fields = new ArrayList<>(Arrays.asList(t.getSuperclass().getDeclaredFields()));
+        fields.addAll(Arrays.asList(t.getDeclaredFields()));
+
         for (Field field : fields) {
             if (!field.isAnnotationPresent(HtmlFormField.class))
                 continue;
+
+            if (fieldsInCurrentTab == 0) {
+                tabCounter++;
+                htmlFormBuilder.append("<div class=\"row\">");
+            }
+
+            fieldsInCurrentTab++;
+
             HtmlFormField htmlFormField = field.getAnnotation(HtmlFormField.class);
 
             String fieldName = field.getName();
@@ -127,35 +161,54 @@ public class HtmlComponent implements Serializable {
                 type = "number";
             }
             if (field.getType().isEnum()) {
-                htmlFormBuilder.append("<div class=\"mb-1 mt-0 p-2\">\n" +
+                htmlFormBuilder.append("<div class=\"col-md-4\">\n" +
                                 " <label for=\" " + fieldName + "\" class=\"form-label\">" + label + "</label>\n")
-                        .append("<select class=\"form-select form-select-sm\" id=\"" + fieldName + "\" name=\""+ fieldName + "\">\n");
+                        .append("<select class=\"form-select form-select-sm\" id=\"" + fieldName + "\" name=\"" + fieldName + "\">\n");
 
                 Class<?> enumClass = field.getType();
                 for (Object enumConstant : enumClass.getEnumConstants()) {
-                    htmlFormBuilder.append("<option value=\"" + enumConstant.toString() + "\">" + enumConstant + "</option>\n");
+                    Method method = null;
+                    try {
+                        method = field.getType().getMethod("getName");
+
+                        htmlFormBuilder.append("<option value=\"" + enumConstant.toString() + "\">" + method.invoke(enumConstant) + "</option>\n");
+                    } catch (IllegalAccessException | InvocationTargetException | NoSuchMethodException e) {
+                        throw new RuntimeException(e);
+                    }
                 }
                 htmlFormBuilder.append(" </select></div>");
                 continue;
             }
 
-            htmlFormBuilder.append("<div class=\"mb-1 mt-0 p-2\">\n" +
+            htmlFormBuilder.append("<div class=\" col-md-4\">\n" +
                             " <label for=\" " + fieldName + "\" class=\"form-label\">" + label + "</label>\n")
                     .append(htmlFormField.isRequired() ? "<span style=\"color:black;\">*</span> " : "")
                     .append(" <input type=\"" + type + "\"").append(htmlFormField.isRequired() ? "required" : "")
                     .append(" class=\"form-control form-control-sm\" id=\"" + fieldName + "\" name=\"" + fieldName + "\">\n" +
                             "</div>");
+
+            if (fieldsInCurrentTab >= maxFieldsPerTab) {
+                htmlFormBuilder.append("</div>");
+                fieldsInCurrentTab = 0;
+            }
         }
+
+        if (fieldsInCurrentTab > 0) {
+            htmlFormBuilder.append("</div>");
+        }
+
         htmlFormBuilder.append("""
-                        <div class="d-grid gap-2 p-2">
-                            <button class="btn btn-primary" type="submit">Create """)
+                        <div class="gap-2 p-2 d-flex justify-content-center">
+                            <button class="btn btn-lg btn-primary" type="submit">Create """)
                 .append(htmlForm.label()).append("""
                                     </button>
                                 </div>
                             </form>
-                        </div> </div>
+                            </div>
+                            </div>
                         </div>
-                        """);
+                    </div>
+                    """);
 
         return htmlFormBuilder.toString();
     }
